UAF-6 - fixing some of the person/principal search handling